# sopra_steria

./: .gitattributes  .gitignore  AGENTS.MD  AGENTS.md  CODEX_IMMEDIATE_TASKS.md  CODEX_READ_THIS_PYTHON_PROJECT.md  DASHBOARD_BUSINESS_AUDIT.md  DASHBOARD_RATIONALIZATION_COMPLETE.md  MASTER_SM_DASHBOARD_DATA_ENHANCED.md  NODE_REFACTOR_LOG.md  NOT_NODEJS_THIS_IS_PYTHON.md  P1_Experience_Analysis_Report.md  PYTHON_PROJECT.md  README.md  THIS_IS_PYTHON_NOT_NODEJS.txt  agents.md  backlog.md  dashboard_integrity_audit.py  detect_runtime.py  duplicate_cleanup_script.py  emergency_syntax_fix.py  eslint.config.cjs  eslint.config.js  fix_imports_systematic.py  function_import_audit.py  gap_analysis_report.json  generate_html_report.py  improvement_plan.md  improvement_prompts.md  inline_styles_audit.csv  integrity_report_clean.txt  integrity_report_completely_fixed.txt  integrity_report_final_fixed.txt  integrity_report_improved.txt  json_to_md_converter.py  launch_brand_dashboard.sh  launch_brand_health_command_center.sh  launch_dashboard.sh  local_requirements.txt  node_refactor.md  (+19 more)
.devcontainer/: devcontainer.json  setup.sh
api/: .gitignore  package-lock.json  package.json  tsconfig.json
audit_data/: README.md  persona_comparison.parquet  summary_stats.json  unified_audit_data.csv  unified_audit_data.parquet  unified_audit_data_before_adding_social_platforms.csv  unified_audit_data_before_social_update.csv  unified_experience_data.csv  unified_experience_data.parquet  url_registry.json
audit_inputs/: audit_urls.md
audit_tool/: README_gap_analyzer.md  SOCIAL_MEDIA_BACKFILL_GUIDE.md  __init__.py  ai_interface.py  audit_post_processor.py  backfill_packager.py  data_gateway.py  gap_analyzer.py  generators.py  html_report_generator.py  main.py  methodology_parser.py  methodology_parser_backup.py  models.py  multi_persona_packager.py  packager.py  persona_parser.py  reporter.py  scraper.py  simple_test_post_processor.py  social_media_backfill.py  strategic_summary_generator.py  test_post_processor.py  tier_classifier.py
brand_audit_reports/: DATA_MAP.md  README.md  SUMMARY.md  generate_brand_consistency_report.py  generate_comprehensive_brand_report.py
cache/: wwwlinkedincomcompanysoprasteria-benelux.pkl  wwwnldigitalnlledensopra-steria-nederland-b-v.pkl  wwwsoprasteriabe.pkl  wwwsoprasteriabeabout-ushistory.pkl  wwwsoprasteriabeindustriesfinancial-services.pkl  wwwsoprasteriabeindustriesindustry-retail-logistics-telecom-media.pkl  wwwsoprasteriabewhatwedodata-aidata-science-and-aithe-future-of-generative-ai.pkl  wwwsoprasteriabewhatwedodigital-themesdeliver-flexible-always-on-performancecloud-infrastructure-platformssopra-steria-transformation-services-for-microsoft-azure.pkl  wwwsoprasteriacom.pkl  wwwsoprasteriacomabout-uscorporate-responsibility.pkl  (+9 more)
(+692 files in other folders)
